--- a/public/productSalesMonitor.html
+++ b/public/productSalesMonitor.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="css/unified-dashboard.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/productSalesMonitor.css">
-    <!-- 引入Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- 引入Chart.js -->    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- 先引入工具类 -->
+    <script src="js/salesUtils.js"></script>
+    <script src="js/categoryUtils.js"></script>
 </head>
 
 <body>
