实现全部功能

--- a/public/cart.html
+++ b/public/cart.html
@@ -71,7 +71,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 在线商店. 版权所有</p>
+            <p>&copy; 2025 在线商店</p>
         </div>
     </footer>
 
