--- a/public/checkout.html
+++ b/public/checkout.html
@@ -76,7 +76,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 在线商店. 版权所有</p>
+        <p>&copy; 2025 在线商店</p>
     </footer>
 
     <script src="js/area-data.js"></script>
