--- a/public/productCategoryManagement.html
+++ b/public/productCategoryManagement.html
@@ -106,9 +106,7 @@
                 <button type="submit">更新商品</button>
                 <button type="button" onclick="hideEditProductForm()">取消</button>
             </form>
-        </div>
-
-        <!-- 产品列表 -->
+        </div>        <!-- 产品列表 -->
         <div id="products-list">
             <h3>现有商品</h3>
             <table id="product-table">
@@ -118,6 +116,7 @@
                         <th>种类</th>
                         <th>价格</th>
                         <th>库存</th>
+                        <th>状态</th>
                         <th>操作</th>
                     </tr>
                 </thead>
@@ -197,7 +196,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 牧燕小站</p>
+        <p>&copy; 2025 牧燕小站</p>
     </footer>
 
     <script src="js/productCategoryManagement.js"></script>
