--- a/public/productDetails.html
+++ b/public/productDetails.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>产品详情 - 在线商店</title>
-    <link rel="stylesheet" href="css/variables.css">
+    <title>产品详情 - 在线商店</title>    <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/productDetails.css">
+    <link rel="stylesheet" href="css/recommendations.css">
 </head>
 
 <body>
@@ -51,14 +51,6 @@
     <!-- 热门推荐 -->
     <section id="popular-recommendations">
         <!-- 热门推荐将在这里动态加载 -->
-    </section>
-
-    <!-- Related Products -->
-    <section id="related-products">
-        <h2>相关推荐</h2>
-        <div id="related-products-container">
-            <!-- 相关产品将在这里动态加载 -->
-        </div>
     </section>
 
     <!-- Footer -->
