--- a/public/operationLogs.html
+++ b/public/operationLogs.html
@@ -211,7 +211,7 @@
     </div>
 
     <footer class="main-footer">
-        <p>&copy; 2025 在线购物平台 | 所有权利保留</p>
+        <p>&copy; 2025 在线购物平台</p>
     </footer>
 
     <script src="js/auth.js"></script>
