--- a/public/salesProductLog.html
+++ b/public/salesProductLog.html
@@ -204,7 +204,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 在线购物平台 | 所有权利保留</p>
+        <p>&copy; 2025 在线购物平台</p>
     </footer>    <!-- 脚本引用 -->
     <script src="js/auth.js"></script>
     <script src="js/api.js"></script>
